src/test/fail/continue_outside_loop.ly
#[
SyntaxError: 'continue' used outside of a loop.
Where: File "test/fail/continue_outside_loop.ly" at line 6
]#

continue
